--- a/src/components/Navbar1.css
+++ b/src/components/Navbar1.css
@@ -1,10 +1,24 @@
 html, body{
     box-sizing: border-box;
     overflow-x: hidden;
+    padding-top: 7vh;
+}
+nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    height: 10vh;
+    backdrop-filter: blur(200px);
+    -webkit-backdrop-filter: blur(200px);
+    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.233);
+    background-color: rgba(237, 242, 244, 0.267);
 }
 div nav div{
     display: flex;
     justify-content: space-between;
+    height: 10vh;
     padding: 0px 40px;
     align-items: center;
     backdrop-filter: blur(5px);
@@ -84,7 +98,8 @@ div nav ul li a:hover{
         display: none;
     }
     .hamburger{
-        display: block;
+        display: flex;
+        align-items: center;
     }
 
 }
