--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,17 +1,16 @@
 .banner{
-    background-image: url(/public/images/pcmmh.jpg);
+    background-image: url(/public/images/pcmmh\ -\ Copy.jpg);
     height: 40vh;
     width: 100vw;
     background-size: cover;
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     margin-top: 20px;
-    background-position: top;
 }
 
 @media (max-width: 1460px){
     .banner{
-    background-image: url(/public/images/pcmmh2.jpg);
+    background-image: url(/public/images/pcmmh2\ -\ Copy.jpg);
     }
 }
 @media (max-width: 1040px){
