--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -3,13 +3,13 @@
     align-items: center;
     justify-content: center;
     gap: 5px;
-    padding: 0 20px;
+    padding: 0 5vw;
+    max-width: 90vw;
 }
 .search-input{
     padding: 10px;
     flex: 1;
     border-radius: 20px;
-    max-width: 300px;
     border: 1px solid rgb(239, 35, 60);
     background-color: rgb(237, 242, 244);
     outline-style: none;
