--- a/src/components/CookieConsent.css
+++ b/src/components/CookieConsent.css
@@ -7,9 +7,8 @@
     color: white;
     padding: 15px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     z-index: 1000;
     row-gap: 5vw;
@@ -34,7 +33,6 @@
     background-color: #ef233bab;
     color: white;
     border: none;
-    margin-left: auto;
     max-width: max-content;
     min-width: max-content;
     padding: 10px 15px;
@@ -42,6 +40,24 @@
     border-radius: 5px;
 }
 
+.reject-btn {
+    background-color: #8d99aebd;
+    color: white;
+    border: none;
+    max-width: max-content;
+    min-width: max-content;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.cookieBtnDiv{
+    display: flex;
+    justify-content: flex-end;
+    gap: 5vw;
+}
 .accept-btn:hover {
     background-color: #EF233C;
+}
+.accept-btn:hover {
+    background-color: #8D99AE;
 }
